--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,27 @@
-<h2>Sign up</h2>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
-
-  <div><%= f.label :username %><br>
-  <%= f.text_field :username %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+ <h2><span>注册新用户</span></h2>
+    <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name),:html => {:class => "login"}) do |f| %>
+        <p>
+            <label for="user_username">用户名</label>
+            <%= f.text_field :username , :class => "input-medium validate[required,minSize[6],maxSize[30],custom[onlyLetterNumber]]" %>
+        </p>
+        <p>
+            <label for="user_email">电子邮件</label>
+            <%= f.email_field :email , :class => "input-medium validate[required,maxSize[50],custom[email]]" %>
+        </p>
+        <p>
+            <label for="user_password">密码</label>
+            <%= f.password_field :password, :class => "input-medium validate[required,minSize[6],maxSize[30]]" %>
+        </p>
+        <p>
+            <label for="user_password_confirmation">密码确认</label>
+            <%= f.password_field :password_confirmation, :class => "input-medium validate[required,minSize[6],maxSize[30],equals[user_password]]" %>
+        </p>
+        <p>
+            <input  type="submit" value="完成" /> 
+            <input  type="submit" value="取消" />
+        </p>
+        <p>
+          <%= render "devise/shared/links" %>
+        </p>
+    <% end %>
